feature/text-editor edit EditWindow

--- a/app/src/main/resources/fx_screens/EditView.fxml
+++ b/app/src/main/resources/fx_screens/EditView.fxml
@@ -1,15 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.effect.BoxBlur?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.EditController">
+<AnchorPane fx:id="rootPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.EditController">
     <children>
-        <ScrollPane prefHeight="400.0" prefWidth="600.0">
+      <Circle fill="#14165a" layoutX="100.0" layoutY="350.0" radius="136.0" strokeType="INSIDE">
+         <effect>
+            <BoxBlur height="93.19" iterations="2" width="81.26" />
+         </effect>
+      </Circle>
+      <Circle fill="#cdceff" layoutX="565.0" layoutY="86.0" radius="78.0" strokeType="INSIDE">
+         <effect>
+            <BoxBlur height="88.41" width="97.95" />
+         </effect>
+      </Circle>
+      <Circle fill="#0b0f85" layoutX="236.0" layoutY="44.0" radius="100.0" strokeType="INSIDE">
+         <effect>
+            <BoxBlur width="240.93" />
+         </effect>
+      </Circle>
+      <Circle fill="#0b0f85" layoutX="611.0" layoutY="372.0" radius="100.0" strokeType="INSIDE">
+         <effect>
+            <BoxBlur height="143.23" width="193.27" />
+         </effect>
+      </Circle>
+        <ScrollPane layoutX="22.0" layoutY="64.0" prefHeight="321.0" prefWidth="556.0" style="-fx-background-color: rgba(255, 255, 255, 0.3);">
             <content>
-                <VBox fx:id="textAreaContainer" prefHeight="398.0" prefWidth="566.0" />
+                <VBox fx:id="textAreaContainer" prefHeight="306.0" prefWidth="541.0" style="-fx-background-color: rgba(255, 255, 255, 0.3);">
+               <padding>
+                  <Insets left="10.0" right="10.0" />
+               </padding>
+            </VBox>
             </content>
         </ScrollPane>
+      <Pane prefHeight="44.0" prefWidth="601.0" style="-fx-background-color: #9497FE;">
+         <children>
+            <ImageView fitHeight="31.0" fitWidth="34.0" layoutX="14.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/ClipboardList.png" />
+               </image>
+            </ImageView>
+            <Label layoutX="52.0" layoutY="11.0" text="Стенограмма">
+               <font>
+                  <Font name="Tilda Sans Bold" size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="367.0" layoutY="13.0" text="редактирование протокола встречи">
+               <font>
+                  <Font name="Tilda Sans Regular" size="14.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
     </children>
 </AnchorPane>
