--- a/app/src/main/resources/fx_screens/downloading.fxml
+++ b/app/src/main/resources/fx_screens/downloading.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.BoxBlur?>
@@ -9,8 +8,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.shape.Circle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="440.0" prefWidth="794.0" xmlns="http://javafx.com/javafx/21.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.DownloadingController">
+<AnchorPane prefHeight="440.0" prefWidth="794.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.DownloadingController">
     <children>
         <Circle fill="#9da0fa" layoutX="85.0" radius="100.0" strokeType="INSIDE">
             <effect>
@@ -33,8 +33,7 @@
             </effect>
         </Circle>
 
-        <Label layoutX="56.0" layoutY="20.0" text="Извлечение аудио" textFill="#1e1d1d"
-               style="-fx-font-family: 'Tilda Sans Semibold'; -fx-font-size: 14;" />
+        <Label layoutX="56.0" layoutY="20.0" style="-fx-font-family: 'Tilda Sans Semibold'; -fx-font-size: 14;" text="Извлечение аудио" textFill="#1e1d1d" />
 
         <Pane layoutX="140.0" layoutY="129.0" prefHeight="292.0" prefWidth="582.0" style="-fx-background-color: #9DA0FA; -fx-background-radius: 27;">
             <effect>
@@ -46,37 +45,28 @@
                         <DropShadow height="0.0" radius="0.0" width="0.0" />
                     </effect>
                     <children>
-                        <Label layoutX="150.0" layoutY="61.0" text="перетащите файл или выберите его"
-                               style="-fx-font-family: 'Tilda Sans Semibold'; -fx-font-size: 14;" />
+                        <Label layoutX="150.0" layoutY="61.0" style="-fx-font-family: 'Tilda Sans Semibold'; -fx-font-size: 14;" text="перетащите файл или выберите его" />
 
-                        <Button layoutX="205.0" layoutY="95.0" mnemonicParsing="false" onAction="#onFileButtonClick"
-                                prefHeight="31.0" prefWidth="116.0"
-                                style="-fx-background-radius: 16; -fx-background-color: #3338D5; -fx-font-family: 'Tilda Sans Semibold'; -fx-font-size: 13;"
-                                text="Выбрать файл" textAlignment="CENTER" textFill="WHITE" />
+                        <Button layoutX="205.0" layoutY="95.0" mnemonicParsing="false" onAction="#onFileButtonClick" prefHeight="31.0" prefWidth="116.0" style="-fx-background-radius: 16; -fx-background-color: #3338D5; -fx-font-family: 'Tilda Sans Semibold'; -fx-font-size: 13;" text="Выбрать файл" textAlignment="CENTER" textFill="WHITE" />
 
                         <ImageView fx:id="ImageViewDrop" fitHeight="43.0" fitWidth="40.0" layoutX="242.0" layoutY="12.0" />
                     </children>
                 </Pane>
 
-                <Label layoutX="139.0" layoutY="14.0" text="загрузка записи видео-конференции"
-                       style="-fx-font-family: 'Tilda Sans Bold'; -fx-font-size: 18;" />
+                <Label layoutX="139.0" layoutY="14.0" style="-fx-font-family: 'Tilda Sans Bold'; -fx-font-size: 18;" text="загрузка записи видео-конференции" />
 
-                <Button fx:id="DownloadButton" disable="true" layoutX="206.0" layoutY="211.0" mnemonicParsing="false" onAction="#onDownloadButtonClick"
-                        prefHeight="31.0" prefWidth="170.0"
-                        style="-fx-background-color: #14165A; -fx-background-radius: 16; -fx-font-family: 'Tilda Sans Medium'; -fx-font-size: 12;" text="Загрузить файл" textFill="WHITE" />
+                <Button fx:id="DownloadButton" disable="true" layoutX="206.0" layoutY="211.0" mnemonicParsing="false" onAction="#onDownloadButtonClick" prefHeight="31.0" prefWidth="170.0" style="-fx-background-color: #14165A; -fx-background-radius: 16; -fx-font-family: 'Tilda Sans Medium'; -fx-font-size: 12;" text="Загрузить файл" textFill="WHITE" />
 
                 <Pane fx:id="sucsessPane" layoutX="194.0" layoutY="253.0" prefHeight="31.0" prefWidth="194.0" style="-fx-background-color: #BFFFBA; -fx-background-radius: 10;" visible="false">
                     <children>
                         <ImageView fx:id="imgCheckCircle" fitHeight="23.0" fitWidth="31.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true" />
-                        <Label layoutX="49.0" layoutY="7.0" text="Успешно"
-                               style="-fx-font-family: 'Tilda Sans Semibold'; -fx-font-size: 12;" />
+                        <Label layoutX="49.0" layoutY="7.0" style="-fx-font-family: 'Tilda Sans Semibold'; -fx-font-size: 12;" text="Успешно" />
                     </children>
                 </Pane>
 
                 <Pane fx:id="errorPane" layoutX="197.0" layoutY="253.0" prefHeight="31.0" prefWidth="194.0" style="-fx-background-color: #FFE4E4; -fx-background-radius: 10;" visible="false">
                     <children>
-                        <Label layoutX="44.0" layoutY="8.0" text="Ошибка: выберите файл" textFill="#ff0004"
-                               style="-fx-font-family: 'Tilda Sans Semibold'; -fx-font-size: 12;" />
+                        <Label layoutX="44.0" layoutY="8.0" style="-fx-font-family: 'Tilda Sans Semibold'; -fx-font-size: 12;" text="Ошибка: выберите файл" textFill="#ff0004" />
                         <ImageView fx:id="imgDangerCircle" fitHeight="23.0" fitWidth="25.0" layoutX="14.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true" />
                     </children>
                 </Pane>
@@ -84,5 +74,10 @@
         </Pane>
 
         <ImageView fx:id="imgUserSpeak2" fitHeight="31.0" fitWidth="31.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+      <Button fx:id="loadButton" layoutX="588.0" layoutY="26.0" mnemonicParsing="false" onMouseClicked="#loadFromDatabase" prefHeight="23.0" prefWidth="133.0" style="-fx-background-color: #3338D5; -fx-background-radius: 16;" text="Загрузить из базы" textFill="WHITE">
+         <font>
+            <Font name="Tilda Sans Medium" size="12.0" />
+         </font>
+      </Button>
     </children>
 </AnchorPane>
