--- a/app/src/main/resources/fx_screens/downloading.fxml
+++ b/app/src/main/resources/fx_screens/downloading.fxml
@@ -47,7 +47,7 @@
                     <children>
                         <Label layoutX="150.0" layoutY="61.0" style="-fx-font-family: 'Tilda Sans Semibold'; -fx-font-size: 14;" text="перетащите файл или выберите его" />
 
-                        <Button layoutX="205.0" layoutY="95.0" mnemonicParsing="false" onAction="#onFileButtonClick" prefHeight="31.0" prefWidth="116.0" style="-fx-background-radius: 16; -fx-background-color: #3338D5; -fx-font-family: 'Tilda Sans Semibold'; -fx-font-size: 13;" text="Выбрать файл" textAlignment="CENTER" textFill="WHITE" />
+                        <Button fx:id="loadFromFileButton" layoutX="205.0" layoutY="95.0" mnemonicParsing="false" onAction="#onFileButtonClick" prefHeight="31.0" prefWidth="116.0" style="-fx-background-radius: 16; -fx-background-color: #3338D5; -fx-font-family: 'Tilda Sans Semibold'; -fx-font-size: 13;" text="Выбрать файл" textAlignment="CENTER" textFill="WHITE" />
 
                         <ImageView fx:id="ImageViewDrop" fitHeight="43.0" fitWidth="40.0" layoutX="242.0" layoutY="12.0" />
                     </children>
@@ -55,7 +55,7 @@
 
                 <Label layoutX="139.0" layoutY="14.0" style="-fx-font-family: 'Tilda Sans Bold'; -fx-font-size: 18;" text="загрузка записи видео-конференции" />
 
-                <Button fx:id="DownloadButton" disable="true" layoutX="206.0" layoutY="211.0" mnemonicParsing="false" onAction="#onDownloadButtonClick" prefHeight="31.0" prefWidth="170.0" style="-fx-background-color: #14165A; -fx-background-radius: 16; -fx-font-family: 'Tilda Sans Medium'; -fx-font-size: 12;" text="Загрузить файл" textFill="WHITE" />
+                <Button fx:id="downloadButton" disable="true" layoutX="206.0" layoutY="211.0" mnemonicParsing="false" onAction="#onDownloadButtonClick" prefHeight="31.0" prefWidth="170.0" style="-fx-background-color: #14165A; -fx-background-radius: 16; -fx-font-family: 'Tilda Sans Medium'; -fx-font-size: 12;" text="Загрузить файл" textFill="WHITE" />
 
                 <Pane fx:id="sucsessPane" layoutX="194.0" layoutY="253.0" prefHeight="31.0" prefWidth="194.0" style="-fx-background-color: #BFFFBA; -fx-background-radius: 10;" visible="false">
                     <children>
