--- a/app/src/main/resources/fx_screens/downloading.fxml
+++ b/app/src/main/resources/fx_screens/downloading.fxml
@@ -55,7 +55,7 @@
 
                 <Label layoutX="139.0" layoutY="14.0" style="-fx-font-family: 'Tilda Sans Bold'; -fx-font-size: 18;" text="загрузка записи видео-конференции" />
 
-                <Button fx:id="downloadButton" disable="true" layoutX="206.0" layoutY="211.0" mnemonicParsing="false" onAction="#onDownloadButtonClick" prefHeight="31.0" prefWidth="170.0" style="-fx-background-color: #14165A; -fx-background-radius: 16; -fx-font-family: 'Tilda Sans Medium'; -fx-font-size: 12;" text="Загрузить файл" textFill="WHITE" />
+                <Button fx:id="downloadButton" disable="true" layoutX="206.0" layoutY="211.0" mnemonicParsing="false" onAction="#onDownloadButtonClick" prefHeight="31.0" prefWidth="170.0" style="-fx-background-color: #14165A; -fx-background-radius: 16; -fx-font-family: 'Tilda Sans Medium'; -fx-font-size: 12;" text="Обработать файл" textFill="WHITE" />
 
                 <Pane fx:id="sucsessPane" layoutX="194.0" layoutY="253.0" prefHeight="31.0" prefWidth="194.0" style="-fx-background-color: #BFFFBA; -fx-background-radius: 10;" visible="false">
                     <children>
@@ -74,7 +74,7 @@
         </Pane>
 
         <ImageView fx:id="imgUserSpeak2" fitHeight="31.0" fitWidth="31.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
-      <Button fx:id="loadButton" layoutX="588.0" layoutY="26.0" mnemonicParsing="false" onMouseClicked="#loadFromDatabase" prefHeight="23.0" prefWidth="133.0" style="-fx-background-color: #3338D5; -fx-background-radius: 16;" text="Загрузить из базы" textFill="WHITE">
+      <Button fx:id="loadButton" layoutX="588.0" layoutY="26.0" mnemonicParsing="false" onMouseClicked="#loadFromDatabase" prefHeight="23.0" prefWidth="133.0" style="-fx-background-color: #3338D5; -fx-background-radius: 16;" text="Сохраненные" textFill="WHITE">
          <font>
             <Font name="Tilda Sans Medium" size="12.0" />
          </font>
