--- a/app/src/main/resources/fx_screens/loadOptional.fxml
+++ b/app/src/main/resources/fx_screens/loadOptional.fxml
@@ -15,14 +15,14 @@
 
     <HBox alignment="CENTER" spacing="20">
         <StackPane fx:id="cardDatabase" onMouseClicked="#loadFromDatabase" styleClass="card">
-            <Label styleClass="card-text" text="Загрузить из базы">
+            <Label styleClass="card-text" text="Загрузить из сохраненных">
             <font>
                <Font name="Tilda Sans Medium" size="12.0" />
             </font></Label>
         </StackPane>
 
         <StackPane fx:id="cardVideo" onMouseClicked="#loadFromVideo" styleClass="card">
-            <Label styleClass="card-text" text="Загрузить из видео" />
+            <Label styleClass="card-text" text="Загрузить из файла" />
         </StackPane>
     </HBox>
 
