--- a/app/src/main/resources/fx_screens/loadStenogramm.fxml
+++ b/app/src/main/resources/fx_screens/loadStenogramm.fxml
@@ -30,7 +30,7 @@
       </Circle>
       <Pane layoutX="-1.0" layoutY="-1.0" prefHeight="58.0" prefWidth="606.0" style="-fx-background-color: #9497FE;">
          <children>
-            <Label layoutX="60.0" layoutY="18.0" text="Выбор стенограммы">
+            <Label layoutX="60.0" layoutY="18.0" text="Сохраненные файлы">
                <font>
                   <Font name="Tilda Sans Bold" size="18.0" />
                </font>
