--- a/app/src/main/resources/fx_screens/downloading.fxml
+++ b/app/src/main/resources/fx_screens/downloading.fxml
@@ -7,10 +7,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="440.0" prefWidth="794.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.DownloadingController">
+<AnchorPane prefHeight="778.0" prefWidth="1137.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.DownloadingController">
     <children>
         <Circle fill="#9da0fa" layoutX="85.0" radius="100.0" strokeType="INSIDE">
             <effect>
@@ -22,20 +23,41 @@
                 <BoxBlur height="133.69" width="150.37" />
             </effect>
         </Circle>
-        <Circle fill="#0b0f85" layoutX="756.0" layoutY="76.0" radius="146.0" strokeType="INSIDE">
+        <Circle fill="#0b0f85" layoutX="985.0" layoutY="130.0" radius="146.0" strokeType="INSIDE">
             <effect>
                 <BoxBlur height="178.74" iterations="3" width="107.48" />
             </effect>
         </Circle>
-        <Circle fill="#14165a" layoutX="114.0" layoutY="481.0" radius="100.0" strokeType="INSIDE">
+      <Circle fill="#2228d8" layoutX="472.0" layoutY="196.0" radius="66.0" strokeType="INSIDE">
+         <effect>
+            <BoxBlur height="64.58" width="57.43" />
+         </effect>
+      </Circle>
+      <Circle fill="#3338d5" layoutX="779.0" layoutY="556.0" radius="121.0" strokeType="INSIDE">
+         <effect>
+            <BoxBlur height="255.0" width="255.0" />
+         </effect>
+      </Circle>
+        <Circle fill="#14165a" layoutX="185.0" layoutY="617.0" radius="100.0" strokeType="INSIDE">
             <effect>
-                <BoxBlur height="141.2" iterations="3" width="141.2" />
+                <BoxBlur height="100.69" iterations="3" width="79.24" />
             </effect>
         </Circle>
-
-        <Label layoutX="56.0" layoutY="20.0" style="-fx-font-family: 'Tilda Sans Semibold'; -fx-font-size: 14;" text="Извлечение аудио" textFill="#1e1d1d" />
-
-        <Pane layoutX="140.0" layoutY="129.0" prefHeight="292.0" prefWidth="582.0" style="-fx-background-color: #9DA0FA; -fx-background-radius: 27;">
+      <Button fx:id="menuButton" layoutX="10.0" layoutY="10.0" style="-fx-font-size: 20; -fx-background-color: transparent;" text="☰" textFill="WHITE">
+         <font>
+            <Font name="/fonts/Tilda Sans Bold" size="12.0" />
+         </font>
+      </Button>
+        <VBox fx:id="sideMenu" layoutY="61.0" maxWidth="200" minWidth="0" prefHeight="717.0" prefWidth="200" style="-fx-background-color: #CDCEFF; -fx-padding: 20;" translateX="-200">
+            <Button maxWidth="Infinity" onAction="#handleMainClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Главная">
+                <font>
+                    <Font name="Tilda Sans Medium" size="12.0" />
+                </font></Button>
+            <Button maxWidth="Infinity" onAction="#handleSavingsClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Сохраненные файлы" />
+            <Button maxWidth="Infinity" onAction="#handleEditClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Обработать видео" />
+            <Button maxWidth="Infinity" onAction="#handleExitClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Выход" />
+        </VBox>
+        <Pane layoutX="246.0" layoutY="243.0" prefHeight="292.0" prefWidth="582.0" style="-fx-background-color: #9DA0FA; -fx-background-radius: 27;">
             <effect>
                 <DropShadow blurType="ONE_PASS_BOX" height="0.0" radius="0.0" width="0.0" />
             </effect>
@@ -72,12 +94,5 @@
                 </Pane>
             </children>
         </Pane>
-
-        <ImageView fx:id="imgUserSpeak2" fitHeight="31.0" fitWidth="31.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
-      <Button fx:id="loadButton" layoutX="588.0" layoutY="26.0" mnemonicParsing="false" onMouseClicked="#loadFromDatabase" prefHeight="23.0" prefWidth="133.0" style="-fx-background-color: #3338D5; -fx-background-radius: 16;" text="Сохраненные" textFill="WHITE">
-         <font>
-            <Font name="Tilda Sans Medium" size="12.0" />
-         </font>
-      </Button>
     </children>
 </AnchorPane>
