--- a/app/src/main/resources/fx_screens/downloading.fxml
+++ b/app/src/main/resources/fx_screens/downloading.fxml
@@ -49,12 +49,12 @@
          </font>
       </Button>
         <VBox fx:id="sideMenu" layoutY="61.0" maxWidth="200" minWidth="0" prefHeight="717.0" prefWidth="200" style="-fx-background-color: #CDCEFF; -fx-padding: 20;" translateX="-200">
-            <Button maxWidth="Infinity" onAction="#handleMainClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Главная">
+            <Button fx:id="main" maxWidth="Infinity" onAction="#handleMainClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Главная">
                 <font>
                     <Font name="Tilda Sans Medium" size="12.0" />
                 </font></Button>
-            <Button maxWidth="Infinity" onAction="#handleSavingsClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Сохраненные файлы" />
-            <Button maxWidth="Infinity" onAction="#handleEditClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Обработать видео" />
+            <Button fx:id="save" maxWidth="Infinity" onAction="#handleSavingsClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Сохраненные файлы" />
+            <Button fx:id="change" maxWidth="Infinity" onAction="#handleEditClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Обработать видео" />
             <Button maxWidth="Infinity" onAction="#handleExitClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Выход" />
         </VBox>
         <Pane layoutX="246.0" layoutY="243.0" prefHeight="292.0" prefWidth="582.0" style="-fx-background-color: #9DA0FA; -fx-background-radius: 27;">
