--- a/app/src/main/resources/fx_screens/loadOptional.fxml
+++ b/app/src/main/resources/fx_screens/loadOptional.fxml
@@ -8,7 +8,7 @@
 
 <VBox alignment="CENTER" spacing="20" style="-fx-padding: 20; -fx-background-color: #cdceff;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.LoadOptionDialogController">
 
-    <Label style="-fx-font-size: 18px; -fx-font-weight: bold;" text="Выберите тип загрузки">
+    <Label fx:id="label" style="-fx-font-size: 18px; -fx-font-weight: bold;" text="Выберите тип загрузки">
       <font>
          <Font name="Tilda Sans Bold" size="12.0" />
       </font></Label>
