--- a/app/src/main/resources/fx_screens/loadStenogramm.fxml
+++ b/app/src/main/resources/fx_screens/loadStenogramm.fxml
@@ -53,6 +53,11 @@
                   </Button>
                </graphic>
             </Label>
+            <Button fx:id="deleteButton" layoutX="412.0" layoutY="430.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="102.0" style="-fx-background-radius: 16; -fx-background-color: #3338D5;" text="Удалить" textFill="WHITE">
+            <font>
+               <Font name="Tilda Sans Medium" size="14.0" />
+            </font>
+         </Button>
          </children>
       </Pane>
       <ScrollPane layoutX="134.0" layoutY="119.0" prefHeight="538.0" prefWidth="867.0">
@@ -66,12 +71,12 @@
       </ScrollPane>
       <Button fx:id="confirmButton" layoutX="492.0" layoutY="686.0" prefHeight="23.0" prefWidth="150.0" style="-fx-background-color: #3338D5; -fx-text-fill: white; -fx-font-size: 14px; -fx-background-radius: 16px" text="Сохранить выбор" />
       <VBox fx:id="sideMenu" layoutY="57.0" maxWidth="200" minWidth="0" prefHeight="722.0" prefWidth="200" style="-fx-background-color: #CDCEFF; -fx-padding: 20;" translateX="-200">
-         <Button maxWidth="Infinity" onAction="#handleMainClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Главная">
+         <Button fx:id="main" maxWidth="Infinity" onAction="#handleMainClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Главная">
             <font>
                <Font name="Tilda Sans Medium" size="12.0" />
             </font></Button>
-         <Button maxWidth="Infinity" onAction="#handleSavingsClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Сохраненные файлы" />
-         <Button maxWidth="Infinity" onAction="#handleEditClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Обработать видео" />
+         <Button fx:id="save" maxWidth="Infinity" onAction="#handleSavingsClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Сохраненные файлы" />
+         <Button fx:id="change" maxWidth="Infinity" onAction="#handleEditClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Обработать видео" />
          <Button maxWidth="Infinity" onAction="#handleExitClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Выход" />
       </VBox>
    </children>
