--- a/app/src/main/resources/fx_screens/EditView.fxml
+++ b/app/src/main/resources/fx_screens/EditView.fxml
@@ -75,6 +75,7 @@
                 <font>
                     <Font name="Tilda Sans Medium" size="12.0" />
                 </font></Button>
+            <Button fx:id="download" maxWidth="Infinity" onAction="#handleDownloadClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Загрузить стенограмму" />
             <Button fx:id="save" maxWidth="Infinity" onAction="#handleSavingsClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Сохраненные файлы" />
             <Button fx:id="change" maxWidth="Infinity" onAction="#handleEditClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Обработать видео" />
             <Button maxWidth="Infinity" onAction="#handleExitClick" style="-fx-background-color: transparent; -fx-text-fill: black; -fx-font-size: 14; -fx-alignment: center-left;" text="Выход" />
