--- a/app/src/main/resources/fx_screens/downloadLane.fxml
+++ b/app/src/main/resources/fx_screens/downloadLane.fxml
@@ -35,15 +35,13 @@
 
     <!-- VBox внутри AnchorPane -->
     <VBox fx:id="vbox" alignment="CENTER" layoutX="195.0" layoutY="170.0" prefHeight="439.0" prefWidth="747.0" spacing="20" AnchorPane.bottomAnchor="169.20000000000005" AnchorPane.leftAnchor="195.0" AnchorPane.rightAnchor="195.4000000000001" AnchorPane.topAnchor="170.0">
-        <ProgressBar fx:id="progressBar" prefHeight="23.0" prefWidth="375.0" style="-fx-accent: #0A0C31; -fx-padding: 2px;" />
-        <Label fx:id="progressLabel" style="-fx-font-size: 20px; -fx-font-weight: bold;" />
         <Pane fx:id="sucsessPane" layoutX="194.0" layoutY="253.0" prefHeight="31.0" prefWidth="194.0" style="-fx-background-color: #CDCEFF; -fx-background-radius: 10;">
             <children>
                 <ImageView fx:id="imgCheckCircle" fitHeight="23.0" fitWidth="31.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/DocumentAdd.png" />
                </image></ImageView>
-                <Label layoutX="49.0" layoutY="7.0" style="-fx-font-family: 'Tilda Sans Semibold'; -fx-font-size: 12;" text="Успешно" />
+                <Label fx:id="label" layoutX="49.0" layoutY="7.0" style="-fx-font-family: 'Tilda Sans Semibold'; -fx-font-size: 12;" text="Успешно" />
             </children>
          <opaqueInsets>
             <Insets />
@@ -52,6 +50,8 @@
             <Insets left="60.0" right="60.0" />
          </VBox.margin>
         </Pane>
+        <ProgressBar fx:id="progressBar" prefHeight="23.0" prefWidth="375.0" style="-fx-accent: #0A0C31; -fx-padding: 2px;" />
+        <Label fx:id="progressLabel" style="-fx-font-size: 20px; -fx-font-weight: bold;" />
     </VBox>
    <Circle fill="#5c61fb" layoutX="1023.0" layoutY="664.0" radius="100.0" strokeType="INSIDE">
       <effect>
