--- a/app/src/main/resources/fx_screens/downloading.fxml
+++ b/app/src/main/resources/fx_screens/downloading.fxml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.effect.BoxBlur?>
 <?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -95,5 +98,23 @@
                 </Pane>
             </children>
         </Pane>
+      <AnchorPane layoutX="769.0" layoutY="577.0" prefHeight="200.0" prefWidth="358.0">
+         <children>
+                 <Pane fx:id="labelPane" layoutX="90.0" layoutY="14.0" prefHeight="31.0" prefWidth="194.0" style="-fx-background-color: #CDCEFF; -fx-background-radius: 10;">
+                     <children>
+                         <ImageView fitHeight="23.0" fitWidth="31.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+                             <image>
+                                 <Image url="@../images/DocumentAdd.png" />
+                             </image>
+                  </ImageView>
+                         <Label fx:id="label" layoutX="49.0" layoutY="7.0" style="-fx-font-family: 'Tilda Sans Semibold'; -fx-font-size: 12;" text="Успешно" />
+                     </children>
+                     <opaqueInsets>
+                         <Insets />
+                     </opaqueInsets>
+                 </Pane>
+              <ProgressBar fx:id="progressBar" layoutX="20.0" layoutY="111.0" prefHeight="23.0" prefWidth="334.0" style="-fx-accent: #0A0C31; -fx-padding: 2px;" />
+              <Label fx:id="progressLabel" layoutX="162.0" layoutY="69.0" prefHeight="30.0" prefWidth="0.0" style="-fx-font-size: 20px; -fx-font-weight: bold;" />
+         </children></AnchorPane>
     </children>
 </AnchorPane>
