feature/develop-menu Fixes save button, adds in transcript dao retrieval by id

--- a/app/src/main/resources/fx_screens/EditView.fxml
+++ b/app/src/main/resources/fx_screens/EditView.fxml
@@ -65,7 +65,7 @@
             <Font name="Tilda Sans Medium" size="13.0" />
          </font>
       </Button>
-      <Button fx:id="saveButton1" layoutX="363.0" layoutY="711.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="123.0" style="-fx-background-color: #3338D5; -fx-background-radius: 16;" text="Сохранить как" textFill="WHITE">
+      <Button fx:id="saveAsButton" layoutX="363.0" layoutY="711.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="123.0" style="-fx-background-color: #3338D5; -fx-background-radius: 16;" text="Сохранить как" textFill="WHITE">
          <font>
             <Font name="Tilda Sans Medium" size="13.0" />
          </font>
