--- a/app/src/main/resources/fx_screens/downloading.fxml
+++ b/app/src/main/resources/fx_screens/downloading.fxml
@@ -15,6 +15,7 @@
 <?import javafx.scene.text.Font?>
 
 <?import ui.custom_elements.ListenProgressBar?>
+<?import ui.custom_elements.Notification?>
 <AnchorPane prefHeight="778.0" prefWidth="1137.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.DownloadingController">
     <children>
         <Circle fill="#9da0fa" layoutX="85.0" radius="100.0" strokeType="INSIDE">
@@ -99,23 +100,22 @@
                 </Pane>
             </children>
         </Pane>
-      <AnchorPane layoutX="769.0" layoutY="577.0" prefHeight="200.0" prefWidth="358.0">
+      <AnchorPane layoutX="769.0" layoutY="657.0" prefHeight="200.0" prefWidth="358.0">
          <children>
-                 <Pane fx:id="labelPane" layoutX="90.0" layoutY="14.0" prefHeight="31.0" prefWidth="194.0" style="-fx-background-color: #CDCEFF; -fx-background-radius: 10;">
+                 <Pane fx:id="labelPane" layoutX="90.0" layoutY="0.0" prefHeight="31.0" prefWidth="194.0" style="-fx-background-color: #CDCEFF; -fx-background-radius: 10;">
                      <children>
                          <ImageView fitHeight="23.0" fitWidth="31.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
                              <image>
                                  <Image url="@../images/DocumentAdd.png" />
                              </image>
                   </ImageView>
-                         <Label fx:id="label" layoutX="49.0" layoutY="7.0" style="-fx-font-family: 'Tilda Sans Semibold'; -fx-font-size: 12;" text="Успешно" />
+                         <Notification fx:id="progressLabel" layoutX="49.0" layoutY="7.0" style="-fx-font-family: 'Tilda Sans Semibold'; -fx-font-size: 12;" />
                      </children>
                      <opaqueInsets>
                          <Insets />
                      </opaqueInsets>
                  </Pane>
-              <ListenProgressBar fx:id="progressBar" layoutX="20.0" layoutY="111.0" prefHeight="23.0" prefWidth="334.0" style="-fx-accent: #0A0C31; -fx-padding: 2px;" />
-              <Label fx:id="progressLabel" layoutX="162.0" layoutY="69.0" prefHeight="30.0" prefWidth="0.0" style="-fx-font-size: 20px; -fx-font-weight: bold;" />
+              <ListenProgressBar fx:id="progressBar" layoutX="20.0" layoutY="40.0" prefHeight="23.0" prefWidth="334.0" style="-fx-accent: #0A0C31; -fx-padding: 2px;" />
          </children></AnchorPane>
     </children>
 </AnchorPane>
