feature/ui-update add new design

--- a/app/src/main/resources/fx_screens/base.fxml
+++ b/app/src/main/resources/fx_screens/base.fxml
@@ -15,7 +15,7 @@
 
 <AnchorPane maxHeight="778.0" maxWidth="1137.0" prefHeight="778.0" prefWidth="1137.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.BaseController">
    <children>
-      <ImageView fitHeight="778.0" fitWidth="1137.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="fonImage" fitHeight="778.0" fitWidth="1137.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/fon1.png" />
          </image>
@@ -32,6 +32,7 @@
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#14165a" height="6.0" layoutY="10.0" strokeType="INSIDE" width="32.0" />
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#14165a" height="6.0" strokeType="INSIDE" width="32.0" />
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#14165a" height="6.0" layoutY="20.0" strokeType="INSIDE" width="32.0" />
+            <Pane prefHeight="27.0" prefWidth="33.0" />
          </children>
       </Group>
       <Label layoutX="81.0" layoutY="17.0" text="Встречеслав" textFill="#0a0c31">
@@ -57,7 +58,7 @@
                   <Insets top="40.0" />
                </VBox.margin>
                <children>
-                  <Pane layoutX="28.0" layoutY="25.0" prefHeight="60.0" prefWidth="308.0" style="-fx-background-color: #CDCEFF; -fx-background-radius: 30;">
+                  <Pane fx:id="mainMenu" layoutX="28.0" layoutY="25.0" onMouseClicked="#mainClick" prefHeight="60.0" prefWidth="308.0" style="-fx-background-color: #CDCEFF; -fx-background-radius: 30;">
                      <children>
                         <ImageView fitHeight="43.0" fitWidth="47.0" layoutX="21.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -71,7 +72,7 @@
                         </Label>
                      </children>
                   </Pane>
-                  <Pane layoutX="28.0" layoutY="117.0" prefHeight="60.0" prefWidth="308.0" style="-fx-background-color: #CDCEFF; -fx-background-radius: 30;">
+                  <Pane fx:id="loadMenu" layoutX="28.0" layoutY="117.0" onMouseClicked="#loadClick" prefHeight="60.0" prefWidth="308.0" style="-fx-background-color: #CDCEFF; -fx-background-radius: 30;">
                      <children>
                         <ImageView fitHeight="43.0" fitWidth="47.0" layoutX="21.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -85,7 +86,7 @@
                         </Label>
                      </children>
                   </Pane>
-                  <Pane layoutX="28.0" layoutY="210.0" prefHeight="78.0" prefWidth="308.0" style="-fx-background-color: #CDCEFF; -fx-background-radius: 40;">
+                  <Pane fx:id="editMenu" layoutX="28.0" layoutY="210.0" onMouseClicked="#editClick" prefHeight="78.0" prefWidth="308.0" style="-fx-background-color: #CDCEFF; -fx-background-radius: 40;">
                      <children>
                         <ImageView fitHeight="43.0" fitWidth="47.0" layoutX="20.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -104,7 +105,7 @@
                         </Label>
                      </children>
                   </Pane>
-                  <Pane layoutX="28.0" layoutY="321.0" prefHeight="78.0" prefWidth="308.0" style="-fx-background-color: #CDCEFF; -fx-background-radius: 40;">
+                  <Pane fx:id="savedMenu" layoutX="28.0" layoutY="321.0" onMouseClicked="#savedClick" prefHeight="78.0" prefWidth="308.0" style="-fx-background-color: #CDCEFF; -fx-background-radius: 40;">
                      <children>
                         <ImageView fitHeight="43.0" fitWidth="47.0" layoutX="20.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -132,7 +133,7 @@
                         <Image url="@../images/Group3.png" />
                      </image>
                   </ImageView>
-                  <Button layoutX="65.0" layoutY="179.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="220.0" style="-fx-background-color: #CDCEFF; -fx-background-radius: 30;" text="ВЫХОД">
+                  <Button fx:id="exitMenu" layoutX="65.0" layoutY="179.0" mnemonicParsing="false" onAction="#exitClick" prefHeight="43.0" prefWidth="220.0" style="-fx-background-color: #CDCEFF; -fx-background-radius: 30;" text="ВЫХОД">
                      <font>
                         <Font name="Manrope ExtraBold" size="18.0" />
                      </font>
