--- a/app/src/main/resources/fx_screens/mainWindow.fxml
+++ b/app/src/main/resources/fx_screens/mainWindow.fxml
@@ -20,14 +20,14 @@
       </ImageView>
       <Pane layoutX="49.0" layoutY="166.0" prefHeight="450.0" prefWidth="302.0" style="-fx-background-color: #9DA0FA; -fx-background-radius: 20;">
          <children>
-            <Label layoutX="29.0" layoutY="24.0" text="Создавай">
+            <Label layoutX="99.0" layoutY="24.0" text="Создавай">
                <font>
                   <Font name="Manrope Bold" size="20.0" />
                </font>
             </Label>
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#0b0f85" height="8.0" layoutX="29.0" layoutY="65.0" strokeType="INSIDE" width="236.0" />
          </children></Pane>
-      <Pane layoutX="432.0" layoutY="166.0" prefHeight="450.0" prefWidth="302.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 20;">
+      <Pane fx:id="cardPane" layoutX="432.0" layoutY="166.0" prefHeight="450.0" prefWidth="302.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 26;">
          <effect>
             <DropShadow height="93.52" radius="45.09" width="88.84">
                <color>
@@ -36,27 +36,92 @@
             </DropShadow>
          </effect>
          <children>
-            <Label layoutX="37.0" layoutY="24.0" text="Распознавай">
+            <Label fx:id="scrollLabel" layoutX="83.0" layoutY="24.0" text="Распознавай">
                <font>
                   <Font name="Manrope Bold" size="20.0" />
                </font>
             </Label>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#14165a" height="8.0" layoutX="37.0" layoutY="65.0" strokeType="INSIDE" width="236.0" />
-            <Label layoutX="206.0" layoutY="87.0" text="Деловые">
-               <font>
-                  <Font name="Manrope SemiBold" size="15.0" />
-               </font>
-            </Label>
-            <Label layoutX="206.0" layoutY="108.0" text="встречи">
-               <font>
-                  <Font name="Manrope SemiBold" size="15.0" />
-               </font>
-            </Label>
-            <Button layoutX="246.0" layoutY="18.0" mnemonicParsing="false" style="-fx-background-color: #FFFFFF;" text="&gt;">
+            <Button fx:id="scrollButton" layoutX="246.0" layoutY="18.0" mnemonicParsing="false" onAction="#scroll" style="-fx-background-color: #FFFFFF;" text="&gt;">
                <font>
                   <Font name="Manrope Bold" size="20.0" />
                </font>
             </Button>
+            <Pane fx:id="scrollPane" layoutX="28.0" layoutY="62.0" prefHeight="14.0" prefWidth="248.0" style="-fx-background-color: #9DA0FA; -fx-background-radius: 5;">
+               <children>
+                  <Rectangle fx:id="scrollRectangle" arcHeight="5.0" arcWidth="5.0" fill="#14165a" height="8.0" layoutX="6.0" layoutY="3.0" strokeType="INSIDE" width="51.0" />
+               </children>
+            </Pane>
+            <Pane fx:id="pane1" layoutX="19.0" layoutY="87.0" prefHeight="347.0" prefWidth="257.0">
+               <children>
+                  <Label layoutX="190.0" layoutY="4.0" text="Деловые">
+                     <font>
+                        <Font name="Manrope SemiBold" size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="196.0" layoutY="25.0" text="встречи">
+                     <font>
+                        <Font name="Manrope SemiBold" size="15.0" />
+                     </font>
+                  </Label>
+                  <ImageView fitHeight="236.0" fitWidth="303.0" layoutX="-19.0" layoutY="135.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/Group5Meet.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
+            <Pane fx:id="pane3" layoutX="3.0" layoutY="85.0" prefHeight="369.0" prefWidth="293.0" visible="false">
+               <children>
+                  <Label layoutX="14.0" layoutY="57.0" text="Онлайн-">
+                     <font>
+                        <Font name="Manrope SemiBold" size="15.0" />
+                     </font>
+                  </Label>
+                  <ImageView fitHeight="249.0" fitWidth="302.0" layoutX="-3.0" layoutY="144.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/Online.png" />
+                     </image>
+                  </ImageView>
+                  <Label layoutX="15.0" layoutY="78.0" text="занятия">
+                     <font>
+                        <Font name="Manrope SemiBold" size="15.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
+            <Pane fx:id="pane2" layoutX="21.0" layoutY="83.0" prefHeight="361.0" prefWidth="265.0" visible="false">
+               <children>
+                  <ImageView fitHeight="266.0" fitWidth="303.0" layoutX="-21.0" layoutY="112.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/Group6Audio.png" />
+                     </image>
+                  </ImageView>
+                  <Label layoutX="143.0" layoutY="91.0" text="Аудиозаписи">
+                     <font>
+                        <Font name="Manrope SemiBold" size="15.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
+            <Pane fx:id="pane4" layoutX="4.0" layoutY="95.0" prefHeight="326.0" prefWidth="302.0" visible="false">
+               <children>
+                  <ImageView fitHeight="258.0" fitWidth="302.0" layoutX="-3.0" layoutY="100.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/Group7Record.png" />
+                     </image>
+                  </ImageView>
+                  <Label layoutX="14.0" layoutY="30.0" text="Записи">
+                     <font>
+                        <Font name="Manrope SemiBold" size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="15.0" layoutY="51.0" text="экрана">
+                     <font>
+                        <Font name="Manrope SemiBold" size="15.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
          </children>
       </Pane>
       <Pane layoutX="808.0" layoutY="166.0" prefHeight="450.0" prefWidth="302.0" style="-fx-background-color: #14165A; -fx-background-radius: 20;">
@@ -66,7 +131,27 @@
                   <Image url="@../images/hand.png" />
                </image>
             </ImageView>
+            <Label fx:id="scrollLabel1" layoutX="56.0" layoutY="24.0" text="В этом обновлении" textFill="WHITE">
+               <font>
+                  <Font name="Manrope Bold" size="20.0" />
+               </font>
+            </Label>
+            <Pane fx:id="scrollPane1" layoutX="27.0" layoutY="62.0" prefHeight="14.0" prefWidth="248.0" style="-fx-background-color: #D0D0FF; -fx-background-radius: 5;">
+               <children>
+                  <Rectangle fx:id="scrollRectangle1" arcHeight="5.0" arcWidth="5.0" fill="#0b0f85" height="8.0" layoutX="6.0" layoutY="3.0" strokeType="INSIDE" width="51.0" />
+               </children>
+            </Pane>
+            <Button fx:id="scrollButton1" layoutX="255.0" layoutY="18.0" mnemonicParsing="false" style="-fx-background-color: #14165A;" text="&gt;" textFill="WHITE">
+               <font>
+                  <Font name="Manrope Bold" size="20.0" />
+               </font>
+            </Button>
          </children>
       </Pane>
+      <Label layoutX="49.0" layoutY="39.0" text="Добро пожаловать!">
+         <font>
+            <Font name="Manrope ExtraBold" size="70.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
